--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
@@ -17,7 +19,9 @@
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-ble-manager": "^12.4.2"
+    "react-native-ble-manager": "^12.4.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.31.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
