--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "~54.0.30",
     "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
@@ -21,7 +22,8 @@
     "react-native": "0.81.5",
     "react-native-ble-manager": "^12.4.2",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.31.1"
+    "react-native-screens": "~3.31.1",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
